# deeplearning_agent

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report_agent应用的伦理问题.md  report_smoke_test_topic.md  requirements.txt  run_research.py  task.jsonpy
docs/: backend_upgrade_mvp.md  langsmith.md  rag_manual_gold_labeling.md
scripts/: apply_annotation_to_queries.py  auto_label_with_llm.py  build_ai_eval_index.py  download_arxiv_abstracts.py  download_rag_eval_docs.py  download_rag_eval_docs_batched.py  export_gold_pool_fast.py  generate_ai_eval_assets.py  generate_gold_answers_with_llm.py  load_test_tasks.py  package_interview_material.py  rag_eval_urls.txt  robust_eval_analysis.py  run_llm_label_pipeline.py  sample_llm_labels_for_review.py  truncate_auto_label_outputs.py
src/: __init__.py  graph.py  state.py
src/backend/: __init__.py  api.py  celery_app.py  logging_utils.py  main.py  redis_store.py  schemas.py  service.py  settings.py  tasks.py
src/config/: __init__.py  env.py
src/evaluator/: __init__.py  rag_eval_runner.py  schemas.py  task_diagnoser.py
src/memory/: embedding_tool.py  file_processor.py  memory_store.py  query_enhancer.py  topic_registry.py  working_memory.py
src/nodes/: __init__.py  aggregate_node.py  execution_node.py  initialize_memory_node.py  no_report_node.py  planning_node.py  report_node.py
src/tools/: async_search_tool.py  langsmith_env.py  llm_client.py
tests/: test_agent_hardening.py  test_backend_api.py  test_embedding.py  test_memory_simple.py  test_memory_store.py
